--- a/PI-Countries-main/client/src/components/f_CreateActivityCard/style.module.css
+++ b/PI-Countries-main/client/src/components/f_CreateActivityCard/style.module.css
@@ -1,4 +1,147 @@
 .box{
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+}
+
+.main{
+    display: flex;
+    justify-content: space-around;
+}
+
+.home{
+    border: solid white 1px;
+    border-radius: 10px;
+    background-color: black;
+    color: rgb(0, 183, 255);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 30px;
+    padding: 10px;
+}
+
+.home:hover {
+    border: solid white 1px;
+    border-radius: 10px;
+    background-color: rgb(67, 86, 110);
+    color: rgb(0, 183, 255);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 30px;
+    padding: 10px;
+}
+
+.act{
+    border: solid rgb(253, 174, 2) 2px;
+    border-radius: 10px;
+    background-color: black;
+    padding: 8px;
+    color: rgb(0, 183, 255);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 20px;
+}
+
+.act:hover{
+    border: dashed rgb(253, 174, 2) 2px;
+    border-radius: 10px;
+    background-color: rgb(82, 82, 82);
+    padding: 8px;
+    color: rgb(0, 183, 255);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 20px;
+}
+
+.save{
+    border: solid rgb(73, 253, 2) 2px;
+    border-radius: 10px;
+    background-color: rgb(255, 255, 255);
+    padding: 8px;
+    color: rgb(0, 85, 18);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 20px;
+}
+
+.save:hover {
+    border: solid rgb(253, 228, 2) 2px;
+    border-radius: 10px;
+    background-color: rgb(134, 46, 46);
+    padding: 8px;
+    color: rgb(0, 255, 55);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 20px;
+}
+
+.save:active {
+    border: solid rgb(253, 228, 2) 2px;
+    border-radius: 10px;
+    background-color: rgb(134, 99, 46);
+    padding: 8px;
+    color: rgb(0, 255, 55);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 20px;
+}
+
+
+.form{
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 26px;
+    border: rgb(10, 10, 10) 15px solid;
+    background-color: rgb(16, 23, 46);
+    width: 600px;
+    color: white;
+}
+
+.input_country{
+    border: rgb(192, 125, 0) 2px solid;
+}
+
+
+.warning{
+    border: rgb(160, 4, 4) 3px solid;
+    color: red;
+}
+
+.dur{
+    border: 7px rgb(145, 145, 2) double;
+}
+
+.new{
+    background-color: grey;
+}
+
+.leave{
+    border: red solid 1px;
+    background-color: black;
+    color: red;
+    font-size: 20px;
+    height: 35px;
+}
+
+.leave:hover {
+    border: red solid 1px;
+    background-color: rgb(59, 29, 29);
+    color: red;
+    font-size: 20px;
+    height: 35px;
+}
+
+.stay{
+    border: dashed rgb(253, 174, 2) 2px;
+    background-color: black;
+    color: greenyellow;
+    font-size: 20px;
+    height: 35px;
+}
+
+.stay:hover {
+    border: dashed rgb(253, 174, 2) 2px;
+    background-color: rgb(51, 83, 32);
+    color: greenyellow;
+    font-size: 20px;
+    height: 35px;
+}
+
+.send{
+    background-color: rgb(0, 0, 0);
+    color: aquamarine;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 20px;
 }
