--- a/PI-Countries-main/client/src/components/f_Home/f_CardByName/style.module.css
+++ b/PI-Countries-main/client/src/components/f_Home/f_CardByName/style.module.css
@@ -1,4 +1,42 @@
 .box{
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
+}
+
+.filter{
+    background-color: rgba(128, 128, 128, 0.651);
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    border-radius: 20px;
+}
+
+.boton{
+    border: solid white 1px;
+    border-radius: 10px;
+    background-color: black;
+    color: rgb(0, 183, 255);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 17px;
+    padding: 10px;
+}
+
+.boton2{
+    border: solid white 1px;
+    border-radius: 10px;
+    background-color: rgb(66, 65, 65);
+    color: rgb(0, 183, 255);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 17px;
+    padding: 10px;
+}
+
+.radio{
+    border: solid 1px rgb(255, 238, 0);
+    border-radius: 7px;
+    color: white;
+    background-color: black;
+    padding: 6px;
+
 }
