--- a/PI-Countries-main/client/src/components/f_Home/f_CardCountryPreviewIntro/style.module.css
+++ b/PI-Countries-main/client/src/components/f_Home/f_CardCountryPreviewIntro/style.module.css
@@ -1,15 +1,47 @@
 .card{
-    width: 280px;
-    height: 250px;
+    height: 100px;
+    border: solid 1px white;
     border-radius: 12px;
-    border: solid 1px black;
+    background-color: rgba(128, 128, 128, 0.363);
+    
+    margin: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.card:hover {
+    height: 100px;
+    border: solid 1px white;
+    border-radius: 12px;
+    background-color: rgba(223, 213, 213, 0.363);
+    
+    margin: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .img{
-    width: 120px;
+    height: 100px;
+    border-radius: 12px;
+}
+
+.boxTitle{
+    display: flex;
+    justify-content: center;
+    width: 180px;
+}
+
+.title{
+    color: white;
+    font-size: 22px;
+    text-transform: capitalize;
 }
 
 /*
 
-
+    display: flex;
+    justify-content: center;
+    align-items: center;
 */
