--- a/PI-Countries-main/client/src/components/f_Home/f_CardByName/style.module.css
+++ b/PI-Countries-main/client/src/components/f_Home/f_CardByName/style.module.css
@@ -38,5 +38,13 @@
     color: white;
     background-color: black;
     padding: 6px;
+}
 
+.error{
+    background-color: rgb(0, 0, 0);
+    border: solid 1px red;
+    color: red;
+    font-family: monospace;
+    font-size: 30px;
+    padding: 4px;
 }
